# mesher

./: .gitignore  CMakeLists.txt  README.md  setup.py
examples/: example_final.py  make_mesh.py  norway.edges  triangulate10.py  triangulate11.py  triangulate2.py  triangulate3.py  triangulate4.py  triangulate5.py  triangulate6.py  triangulate7.py  triangulate8.py  triangulate9.py
src/mesher/: bindings.cpp  cgal_mesher.cpp  math.cpp  math.hpp
